cmake_minimum_required(VERSION 3.10)
set(GTest_DIR "/Users/junming/softwares/vcpkg/packages/gtest_arm64-osx/share/gtest")
project(CppExample1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

include_directories(${PROJECT_SOURCE_DIR}/include)
enable_testing()
file(GLOB TEST_SOURCES ${PROJECT_SOURCE_DIR}/tests/*.cpp)
file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/sources/example.cpp)
add_executable(test_analyzeType ${TEST_SOURCES})
add_executable(main ${SOURCES})
find_package(GTest CONFIG REQUIRED)
if(GTest_FOUND)
    message(STATUS "GTest FOUND!")
else()
    message(STATUS "GTest NOT FOUND!")
endif()

target_link_libraries(test_analyzeType PRIVATE GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
add_test(AnalyzeTypeTests test_analyzeType)